Wait for popup